WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282860
[macOS] Quirk needed to detect Bing Maps in order to eventually fix pinch to zoom
https://bugs.webkit.org/show_bug.cgi?id=282860
Summary
[macOS] Quirk needed to detect Bing Maps in order to eventually fix pinch to ...
Lily Spiniolas
Reported
2024-11-08 16:15:44 PST
Pinch to zoom slow and unresponsive on Bing Maps on macOS
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2024-11-08 16:16:10 PST
rdar://126573838
Lily Spiniolas
Comment 2
2024-11-08 16:37:45 PST
rdar://139544427
Lily Spiniolas
Comment 3
2024-11-08 16:43:40 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36427
EWS
Comment 4
2024-11-09 09:31:58 PST
Committed
286381@main
(6bc0ba3efa72): <
https://commits.webkit.org/286381@main
> Reviewed commits have been landed. Closing PR #36427 and removing active labels.
EWS
Comment 5
2024-12-03 18:57:33 PST
Committed
283286.557@safari-7620-branch
(d047ba4a144b): <
https://commits.webkit.org/283286.557@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2364 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug