[macOS] Quirk needed to detect Bing Maps in order to eventually fix pinch to zoom https://bugs.webkit.org/show_bug.cgi?id=282860 rdar://139544427

Reviewed by Wenson Hsieh.

Added quirk which can detect if the element passed to it
is the canvas on Bing Maps which currently zooms incorrectly
on macOS.

* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::needsBingGestureEventQuirk const):
* Source/WebCore/page/Quirks.h:

Canonical link: https://commits.webkit.org/286381@main